{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 25,
  "lineage": "27d3adc4-9b37-6adf-0033-1720e9a1bcbc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "konnekt_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157282993598:internet-gateway/igw-0aea62c9a667ad491",
            "id": "igw-0aea62c9a667ad491",
            "owner_id": "157282993598",
            "tags": {
              "Name": "konnekt-igw",
              "Project": "konnekt"
            },
            "tags_all": {
              "Name": "konnekt-igw",
              "Project": "konnekt"
            },
            "vpc_id": "vpc-03cf369b27f9685cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.konnekt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "konnekt_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:157282993598:loadbalancer/app/konnekt-alb/fc1ceb0bd8a6ab00",
            "arn_suffix": "app/konnekt-alb/fc1ceb0bd8a6ab00",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "konnekt-alb-102749193.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:157282993598:loadbalancer/app/konnekt-alb/fc1ceb0bd8a6ab00",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "konnekt-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c5e998fe1fda85a6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06a651c54a637354e"
              },
              {
                "subnet_id": "subnet-0722d9f768bf466f5"
              }
            ],
            "subnets": [
              "subnet-06a651c54a637354e",
              "subnet-0722d9f768bf466f5"
            ],
            "tags": {
              "Name": "konnekt-alb",
              "Project": "konnekt"
            },
            "tags_all": {
              "Name": "konnekt-alb",
              "Project": "konnekt"
            },
            "vpc_id": "vpc-03cf369b27f9685cf",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.konnekt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:157282993598:listener/app/konnekt-alb/fc1ceb0bd8a6ab00/fd47f5475bcda28b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:157282993598:targetgroup/konnekt-tg/addbf937ede7c652",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:157282993598:listener/app/konnekt-alb/fc1ceb0bd8a6ab00/fd47f5475bcda28b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:157282993598:loadbalancer/app/konnekt-alb/fc1ceb0bd8a6ab00",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.konnekt_alb",
            "aws_lb_target_group.konnekt_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.konnekt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "konnekt_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:157282993598:targetgroup/konnekt-tg/addbf937ede7c652",
            "arn_suffix": "targetgroup/konnekt-tg/addbf937ede7c652",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:157282993598:targetgroup/konnekt-tg/addbf937ede7c652",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "konnekt-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "konnekt-tg",
              "Project": "konnekt"
            },
            "tags_all": {
              "Name": "konnekt-tg",
              "Project": "konnekt"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03cf369b27f9685cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.konnekt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157282993598:route-table/rtb-03416a4c7aec614f6",
            "id": "rtb-03416a4c7aec614f6",
            "owner_id": "157282993598",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aea62c9a667ad491",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "konnekt-public-rt",
              "Project": "konnekt"
            },
            "tags_all": {
              "Name": "konnekt-public-rt",
              "Project": "konnekt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cf369b27f9685cf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.konnekt_igw",
            "aws_vpc.konnekt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014f054e7ad435687",
            "route_table_id": "rtb-03416a4c7aec614f6",
            "subnet_id": "subnet-0722d9f768bf466f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.konnekt_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.konnekt_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09aa11e6e56fbca2e",
            "route_table_id": "rtb-03416a4c7aec614f6",
            "subnet_id": "subnet-06a651c54a637354e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.konnekt_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.konnekt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157282993598:security-group/sg-0c5e998fe1fda85a6",
            "description": "Allow HTTP inbound to the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5e998fe1fda85a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "konnekt-alb-sg",
            "name_prefix": "",
            "owner_id": "157282993598",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "konnekt-alb-sg",
              "Project": "konnekt"
            },
            "tags_all": {
              "Name": "konnekt-alb-sg",
              "Project": "konnekt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cf369b27f9685cf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.konnekt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157282993598:security-group/sg-074267b38ea8d707c",
            "description": "Allow HTTP inbound only from the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074267b38ea8d707c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB only",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c5e998fe1fda85a6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "konnekt-ec2-sg",
            "name_prefix": "",
            "owner_id": "157282993598",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "konnekt-ec2-sg",
              "Project": "konnekt"
            },
            "tags_all": {
              "Name": "konnekt-ec2-sg",
              "Project": "konnekt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cf369b27f9685cf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.konnekt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157282993598:subnet/subnet-0722d9f768bf466f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0722d9f768bf466f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "157282993598",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "konnekt-public-subnet-1",
              "Project": "konnekt"
            },
            "tags_all": {
              "Name": "konnekt-public-subnet-1",
              "Project": "konnekt"
            },
            "vpc_id": "vpc-03cf369b27f9685cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.konnekt_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157282993598:subnet/subnet-06a651c54a637354e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a651c54a637354e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "157282993598",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "konnekt-public-subnet-2",
              "Project": "konnekt"
            },
            "tags_all": {
              "Name": "konnekt-public-subnet-2",
              "Project": "konnekt"
            },
            "vpc_id": "vpc-03cf369b27f9685cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.konnekt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "konnekt_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157282993598:vpc/vpc-03cf369b27f9685cf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02f63486499c4902a",
            "default_route_table_id": "rtb-0b92ef3cdf6dd461e",
            "default_security_group_id": "sg-03ecd2245ca0d968c",
            "dhcp_options_id": "dopt-05379beb960f71432",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03cf369b27f9685cf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b92ef3cdf6dd461e",
            "owner_id": "157282993598",
            "tags": {
              "Name": "konnekt-vpc",
              "Project": "konnekt"
            },
            "tags_all": {
              "Name": "konnekt-vpc",
              "Project": "konnekt"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}